--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -22,5 +22,9 @@
                 {% endfor %}
             </dl>
         </article>
+        {% if user.is_athenicated %}
+            <hr>
+            <a href="{% url 'courses:create_quiz' course_pk=course.id %}" class='button'>New Quiz</a>
+        {% endif %}
     </div>
 {% endblock %}
