--- a/courses/templates/courses/quiz_form.html
+++ b/courses/templates/courses/quiz_form.html
@@ -1,4 +1,4 @@
-{% extends 'course/layout.html' %}
+{% extends 'courses/layout.html' %}
 {% block title %} New Quiz | {{ course.title }} {{ block.super }}{% endblock %}
 
 {% block breadcrumbs %}
@@ -16,3 +16,5 @@
     </form>
 </div>
 {% endblock %}
+
+
