--- a/courses/templates/courses/quiz_form.html
+++ b/courses/templates/courses/quiz_form.html
@@ -15,6 +15,9 @@
         {{ form.as_p }}
         <input type="submit" class="button" value="Save">
     </form>
+    {% if user.is_authenicated and form.instance.pk %}
+        <hr>
+        <a href="{% url 'courses:create_answer' question_pk=form.instance.pk %}" class"button">Add Answer</a>
 </div>
 {% endblock %}
 
